--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 									<td>(10:00 - 10:30) <h4>Session : Posters Lighting Talks</h4>
 										<ul>
 											<li>10:00 - 10:05 <a href="https://arxiv.org/abs/1908.09980" target="_blank">[arXiv]</a> <a href="workshop-files/presentations/session1-paper1.pdf" target="_blank">[presentation]</a> Automated Fashion Size Normalization, by <i>Eddie S.J. Du, Chang Liu and David H. Wayne.</i>
-											<li>10:05 - 10:10 <a href="https://arxiv.org/abs/1908.10139" target="_blank">[arXiv]</a> <a href="workshop-files/presentations/session1-paper2.pdf" target="_blank">[presentation]</a> Enabling Hyper-Personalisation: Automated Ad Creative Generation and Ranking for Fashion e-Commerce, by <i> Sreekanth Vempati, Sruthi V, Kora Malayil and Sandeep R.</i>
+											
+											<li>10:05 - 10:10 <a href="https://link.springer.com/chapter/10.1007/978-3-030-55218-3_2" target="_blank">[paper]</a> <a href="workshop-files/presentations/session1-paper2.pdf" target="_blank">[presentation]</a> Enabling Hyper-Personalisation: Automated Ad Creative Generation and Ranking for Fashion e-Commerce, by <i> Sreekanth Vempati, Sruthi V, Kora Malayil and Sandeep R.</i>
 											<li>10:10 - 10:15 <a href="https://arxiv.org/abs/1908.09493" target="_blank">[arXiv]</a> <a href="workshop-files/presentations/session1-paper3.pdf" target="_blank">[presentation]</a> Supporting stylists by recommending fashion style, by <i> Tobias Kuhn, Steven Bourke, Levin Brinkmann, Tobias Buchwald, Conor Digan, Hendrik Hache, Sebastian Jäger, Patrick Lehmann, Oskar Maier, Stefan Matting and Yura Okulovsky.</i>
 											<li>10:15 - 10:20 <a href="https://arxiv.org/abs/1908.10642" target="_blank">[arXiv]</a> <a href="workshop-files/presentations/session1-paper4.pdf" target="_blank">[presentation]</a> How big can style be? Addressing high dimensionality for recommending with style, by <i> Diogo Gonçalves, Liwei Liu and Ana Magalhães.</i>
 											<li>10:20 - 10:25 <a href="workshop-files/fashionxrecsys2019_paper_14.pdf" target="_blank">[pdf]</a> <a href="workshop-files/presentations/session1-paper5.pdf" target="_blank">[presentation]</a> Analyzing Customer Feedback for Product Fit Prediction, by <i>Stephan Baier.</i>
@@ -197,9 +198,10 @@
 									<td>(11:00 - 12:30) <h4>Session: Outfits Recommendations and New Trends</h4>
 										<ul>
 											<li>11:00 - 11:20 <a href="https://arxiv.org/abs/1909.04496" target="_blank">[pdf]</a> <a href="workshop-files/presentations/session2-paper1.pdf" target="_blank">[presentation]</a> Assessing Fashion Recommendations: A Multifaceted Offline Evaluation Approach, by <i>Jake Sherman, Chinmay Shukla, Su Zhang, Rhonda Textor and Amy Winecoff.</i>
-											<li>11:20 - 11:50 <a href="https://arxiv.org/abs/1908.10585" target="_blank">[arXiv]</a> <a href="workshop-files/presentations/session2-paper2.pdf" target="_blank">[presentation]</a> Attention-based Fusion for Outfit Recommendation, by <i>Katrien Laenen and Marie-Francine Moens.</i>
-											<li>11:50 - 12:10  <a href="workshop-files/presentations/session2-paper3.pdf" target="_blank">[presentation]</a>  Outfit2Vec: Incorporating Clothing Hierarchical MetaData intoOutfits’ Recommendation, by Shatha Jaradat, Nima Dokoohaki and Mihhail Matskin.</i>
-											<li>12:10 - 12:30 <a href="https://arxiv.org/abs/1908.08284" target="_blank">[arXiv]</a>  <a href="workshop-files/presentations/session2-paper4.pdf" target="_blank">[presentation]</a> Two-Stage Session-based Recommendations with Candidate Rank Embeddings, by <i>Jose Antonio Sanchez Rodriguez, Jui-Chieh Wu and Mustafa Khandwawala.</i>
+											<li>11:20 - 11:50 <a href="https://link.springer.com/chapter/10.1007/978-3-030-55218-3_4" target="_blank">[paper]</a> <a href="workshop-files/presentations/session2-paper2.pdf" target="_blank">[presentation]</a> Attention-based Fusion for Outfit Recommendation, by <i>Katrien Laenen and Marie-Francine Moens.</i>
+
+											<li>11:50 - 12:10  <a href="https://link.springer.com/chapter/10.1007/978-3-030-55218-3_5" target="_blank">[paper]</a>  <a href="workshop-files/presentations/session2-paper3.pdf" target="_blank">[presentation]</a>  Outfit2Vec: Incorporating Clothing Hierarchical MetaData intoOutfits’ Recommendation, by Shatha Jaradat, Nima Dokoohaki and Mihhail Matskin.</i>
+											<li>12:10 - 12:30 <a href="https://link.springer.com/chapter/10.1007/978-3-030-55218-3_3" target="_blank">[paper]</a>  <a href="workshop-files/presentations/session2-paper4.pdf" target="_blank">[presentation]</a> Two-Stage Session-based Recommendations with Candidate Rank Embeddings, by <i>Jose Antonio Sanchez Rodriguez, Jui-Chieh Wu and Mustafa Khandwawala.</i>
 										</ul>
 									</td>
 								</tr>
